# PI-Stuff

./: .env.example  .gitignore  About-PI.md  CHECKLIST.md  CLAUDE.md  README.md  pyproject.toml  scrape_pi.py
.claude/: settings.json
configs/: ki.yaml  pi0.yaml  pi05.yaml  pi06.yaml  pi07.yaml  rlt.yaml  rtc.yaml
configs/eval/: kinetix.yaml  libero.yaml  mujoco.yaml  oxe.yaml
docs/: README.md  colab.md  runpod.md  sim-setup.md
notebooks/: 00_pi0_paligemma_baseline.ipynb  01_fast_eda.ipynb  02_ki_recipe.ipynb  03_rtc_loop.ipynb  04_mem_eda.ipynb  05_rlt_actor_critic.ipynb  06_recap_value_head.ipynb  07_pi07_assembly.ipynb
scripts/: eval.py  infer_server.py  inference_smoketest.py  setup_sim.sh  train.py
src/pi_stack/: __init__.py  cli.py
src/pi_stack/data/: __init__.py  chunking.py  human_to_robot.py  oxe.py  synthetic.py
src/pi_stack/envs/: __init__.py  base.py  kinetix.py  libero.py  mujoco.py
src/pi_stack/inference/: __init__.py  rtc.py  server.py
src/pi_stack/memory/: __init__.py  mem.py
src/pi_stack/models/: __init__.py  action_expert.py  backbones.py  hi_robot.py  pi0.py  pi05.py  pi06.py  pi07.py
src/pi_stack/rlt/: __init__.py  rl_token.py
src/pi_stack/tokenization/: __init__.py  fast.py
src/pi_stack/training/: __init__.py  flow_matching.py  ki.py  recap.py
src/pi_stack/utils/: config.py
tests/: test_fast_tokenizer.py  test_ki.py  test_mem.py  test_pi0.py  test_pi05.py  test_pi07.py  test_pi0_paligemma.py  test_recap.py  test_rlt.py  test_rtc.py  test_smoke.py
