[project]
name = "pi-stack"
version = "0.0.1"
description = "Single-handed implementation of the Physical Intelligence research arc (π₀ → π₀.₇)."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "crohan", email = "cxrohan009@gmail.com" }]
keywords = ["robotics", "vla", "physical-intelligence", "flow-matching", "imitation-learning"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Bare install: keep light. Heavy deps live in extras below.
dependencies = [
    "numpy>=1.26",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "rich>=13.7",
    "tqdm>=4.66",
    "typer>=0.12",
]

[project.optional-dependencies]
# Foundation-model + tokenizer stack. Pulls torch via transformers.
# Note: transformers pinned to <5 because the FAST processor's custom code on
# HF Hub (physical-intelligence/fast) is written against the v4 tokenizer API.
# v5 changed tokenizer init paths and breaks the custom backend instantiation.
# Revisit when PI publishes a v5-compatible processing_action_tokenizer.py.
ml = [
    "transformers>=4.45,<5",
    "tokenizers>=0.20,<0.22",
    "accelerate>=0.34",
    "safetensors>=0.4",
    "einops>=0.8",
    "huggingface-hub>=0.25,<1",
    "scipy>=1.13",          # FAST uses DCT (scipy.fft.dct)
    "scikit-learn>=1.5",
    "sentencepiece>=0.2",   # required by the FAST processor's BPE backend
]

# Torch is split out so the user can choose CUDA wheel index at install time.
# Install with:
#   uv sync --extra gpu      (CPU/Metal default)
#   uv pip install --index-url https://download.pytorch.org/whl/cu124 torch torchvision
gpu = [
    "torch>=2.4",
    "torchvision>=0.19",
]

# JAX path mirrors openpi (PI's open-source library is JAX-first).
jax = [
    "jax>=0.4.30",
    "flax>=0.9",
    "optax>=0.2",
    "chex>=0.1.86",
]

# Simulation environments. Heavy native deps; opt-in.
sim = [
    "gymnasium>=0.29",
    "mujoco>=3.2",
    # Libero and Kinetix are typically installed from source — see docs/.
]

# Open X-Embodiment dataset loader. TensorFlow is huge; opt-in.
# rlds is intentionally omitted — it has no macOS arm64 wheels and no
# source distribution as of 2026-05. tfds streams OXE episodes natively
# without rlds; the package only adds episode-slicing helpers.
oxe = [
    "tensorflow>=2.16",
    "tensorflow-datasets>=4.9",
]

# Inference server (RTC algorithm streams via websockets).
serve = [
    "websockets>=13",
    "uvloop>=0.20; sys_platform != 'win32'",
    "msgpack>=1.0",
]

# Logging / experiment tracking.
track = [
    "wandb>=0.18",
    "tensorboard>=2.17",
]

# Dev tooling.
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "ipykernel>=6.29",
    "ipython>=8.27",
]

# Convenience meta-extra. `uv sync --extra all` for a kitchen-sink setup.
all = [
    "pi-stack[ml,gpu,sim,oxe,serve,track,dev]",
]

[project.scripts]
pi-train = "pi_stack.cli:train"
pi-eval = "pi_stack.cli:eval_"
pi-serve = "pi_stack.cli:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pi_stack"]

# --- Tooling -------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
